# GrowPAL

./: README.md  pyproject.toml  requirements.txt
__MACOSX/: ._LICENSE  ._README.md
__MACOSX/growpal/: ._libclustering.py
growpal/: libclustering.py  libdescriptors.py  libgrowpal.py  libselect_clustering.py
