[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "growpal"
version = "0.1.2"
description = "Growth Pattern Algorithm"
readme = "README.md"
license = "MIT"
authors = [
{ name = "Isaac Rafael Gutierrez Campos", email = "isaac.gutierrezcam@gmail.com" },
{ name = "Gabriel Merino", email = "gabriel.merino2@gmail.com" },
{ name = "Filiberto Ortiz Chi", email = "fortiz666@gmail.com" }
]
requires-python = ">=3.10"
dependencies = ["aegon==1.3.6", "dscribe"]

[project.urls]
Homepage = "https://github.com/fortizchi/growpal"
